# Agentic_OS_ROS

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  SKILL_ONLY_REFACTOR_PLAN.md  pytest.ini  setup.bash
agentic_runtime_src/: AGENTS.md  CODEX_IMPLEMENTATION_TASKBOOK.md  README.md  pyproject.toml  setup.cfg  setup.py
agentic_runtime_src/agentic_os/: __init__.py
agentic_runtime_src/agentic_os/hardware/: README.md
agentic_runtime_src/agentic_os/kernel/: README.md  __init__.py
agentic_runtime_src/agentic_os/sdk/: README.md
agentic_runtime_src/agentic_os/security/: README.md
agentic_runtime_src/agentic_runtime/: __init__.py  agenticos_tools.py  app_invoker.py  app_result.py  audit.py  cli.py  config.py  errors.py  human_channel.py  nl_cli.py  nl_gateway.py  photo_cli.py  provider_contracts.py  real_only.py  server.py  simulation.py  types.py
agentic_runtime_src/agentic_runtime/app_factory/: __init__.py  factory.py  validator.py
agentic_runtime_src/agentic_runtime/app_manager/: app_manager.py
agentic_runtime_src/agentic_runtime/config_manager/: __init__.py  manager.py  models.py
agentic_runtime_src/agentic_runtime/context_manager/: __init__.py  manager.py  models.py
agentic_runtime_src/agentic_runtime/dispatcher/: __init__.py  agent.py  app_index.py  errors.py  (+3 more)
agentic_runtime_src/configs/: agentic.yaml  agentic_robot.yaml  capabilities.yaml  models.yaml  permissions.yaml  places.yaml  runtime.yaml  safety.yaml
agentic_runtime_src/docs/: access_audit.md  agentic_app_developer_guide.md  agentic_os_foundation_completion_loop_engineering_plan_single_commit_no_push.md  aios_kernel_migration_status.md  api_v0.1.md  app_developer_interface.md  app_manifest_v0.1.md  architecture.md  codex_kernel_phase2_progress.md  codex_kernel_port_baseline.md  codex_kernel_port_progress.md  current_agenticos_technical_report.md  demo_room_inspection.md  errors.md  filesystem_cleanup_plan.md  filesystem_layout.md  kernel_syscalls.md  llm_provider_testing.md  module_mapping.md  nav2_integration_plan.md  provider_contracts.md  real_integration.md  real_robot_deployment_taskbook.md  real_robot_testing.md  robot_arm_motion_recovery_execution_report.md  robot_arm_motion_recovery_solution.md  robot_photographer_agent_technical_design.md  robot_photographer_multi_angle_arm_plan.md  ros2_bridge_integration.md  runtime_real_only.md  safety_policy_v0.1.md  scheduler_environment_aware_dag.md  skill_manifest_v0.1.md
agentic_runtime_src/scripts/: build_robot_bridge.sh  build_system_skill_nodes.sh  check_camera_pose_action_groups.py  check_filesystem_layout.py  check_forbidden_imports.py  check_no_runtime_rclpy_imports.py  install_to_opt_agentic.sh  no_fake_mock_allowlist.txt  real_robot_arm_action_group_probe.sh  real_robot_arm_camera_acceptance.sh  real_robot_arm_health_gate.sh  real_robot_gripper_minimal_motion.sh  real_robot_multi_angle_photo_acceptance.sh  real_robot_torque_semantics_probe.sh  run_demo_app.sh  run_robot_bridge.sh  run_robot_inspection.sh  run_robot_skills.sh  run_ros_bridge.sh  run_runtime.sh  run_system_skill_nodes.sh  run_tests.sh  verify_capability_truth.sh  verify_foundation.sh  verify_no_fake_mock.sh  verify_no_mvp_language.sh  verify_real_human.sh  verify_real_llm.sh  verify_real_ros2.sh  verify_real_scheduler_capability.sh  verify_real_scheduler_llm.sh
agentic_runtime_src/skills/: arm_get_state.yaml  arm_move_named.yaml  get_robot_state.yaml  gripper_set.yaml  human_ask.yaml  inspect_area.yaml  manipulation_pick_color_block.yaml  manipulation_place_color_block.yaml  memory_recall.yaml  memory_remember.yaml  navigate_to.yaml  perception_capture_photo.yaml  perception_center_color_block.yaml  perception_detect_color_block.yaml  perception_observe.yaml  perception_verify_held_color_block.yaml  report_say.yaml  resolve_place.yaml  stop_robot.yaml  storage_list_recent_photos.yaml
agentic_runtime_src/tests/: conftest.py  runtime_test_helpers.py  test_access_manager.py  test_agentic_os_kernel_modules.py  test_app_factory.py  test_app_invoker_dispatch.py  test_app_template_real_runtime.py  test_architecture_module_layout.py  test_bridge_manager.py  test_capability_registry.py  test_capability_truth_contract.py  test_ci_profiles.py  test_config.py  test_config_manager_refresh.py  test_context_manager.py  test_current_app_catalog.py  test_deployment_layout.py  test_dispatcher_no_direct_ros.py  test_dispatcher_plan_schema.py  test_dispatcher_rejects_unsafe_motion.py  test_dispatcher_routes_robot_photographer.py  test_docs_do_not_overclaim_capabilities.py  test_docs_real_only_contracts.py  test_errors.py  test_hello_world_agent_real_runtime.py  test_human_queue_channel.py  test_human_real_only.py  test_kernel_agent_cleanup.py  test_kernel_agent_lifecycle.py  test_kernel_agent_models.py  test_kernel_agent_queue_hold_resume.py  test_kernel_agent_resource_registry.py  test_kernel_agent_table.py  test_kernel_context_syscalls.py  test_kernel_e2e_syscall_flow.py  test_kernel_generation_context.py  test_kernel_hooks_queues.py  test_kernel_human_backend.py  test_kernel_llm_core.py  test_kernel_manager_contracts.py  (+66 more)
ros2_bridge_src/agentic_app_runtime_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_bridge_src/agentic_capability_bridge/: package.xml  setup.cfg  setup.py
ros2_bridge_src/agentic_msgs/: CMakeLists.txt  package.xml
ros2_bridge_src/agentic_world_model/: package.xml  setup.cfg  setup.py
(+582 files in other folders)
