[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-runtime"
version = "0.1.0"
description = "Agentic OS runtime MVP running above ROS2."
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6",
  "jsonschema>=4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_runtime*", "agentic_os*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:cacheprovider"]
markers = [
  "portable: no network, no ROS2, no hardware",
  "integration: local integration with fake services",
  "ros2: requires ROS2 environment",
  "hardware: requires real robot hardware",
]
