<?xml version="1.0"?>
<package format="3">
  <name>agentic_app_runtime_bridge</name>
  <version>0.1.0</version>
  <description>Optional Runtime aggregation bridge skeleton for Agentic OS.</description>
  <maintainer email="agentic@example.com">Agentic OS</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>agentic_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
