<?xml version="1.0"?>
<package format="3">
  <name>agentic_capability_bridge</name>
  <version>0.1.0</version>
  <description>Robot capability bridge adapters for Agentic OS.</description>
  <maintainer email="agentic@example.com">Agentic OS</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>agentic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kinematics</depend>
  <depend>kinematics_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>servo_controller</depend>
  <depend>servo_controller_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
