<?xml version="1.0"?>
<package format="3">
  <name>agentic_world_model</name>
  <version>0.1.0</version>
  <description>World model adapter for Agentic OS.</description>
  <maintainer email="agentic@example.com">Agentic OS</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>agentic_msgs</depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
